Remove deprecated test utilities and update cluster handling
Removed the outdated `KronotopTestCluster` and related test configuration files, simplifying the test structure. Introduced `MemberEventLegacy` for better cluster event handling and updated various classes to use new APIs and configurations accordingly.